# Docker_Python_Codec-For-Job

./: README.md  deploy.sh  destroy.sh  start.sh
backend/: .gitignore  Dockerfile  README.md  clear_files.py  compose.yaml  converter_files.py  docker-compose.yaml  dxf_method.py  excel_to_svg.py  flv_cut_method.py  jpg_png_method.py  main.py  opinion_method.py  pdf_break_or_tie.py  pdf_method.py  pdf_split_or_tie_method.py  pdf_to_dxf.py  pdf_to_ppm.py  pdf_to_svg.py  pdf_to_svg_2.py  png_to_svg.py  ppm_to_svg.py  pyproject.toml  sample.py
backend/Converter/: converter_files.py  jpg_png_method.py  pdf_method.py
backend/Cutout/: flv_cut_method.py  movie_cutout.py
backend/Split_Tie/: pdf_split_or_tie_method.py  split_pdf.py  tie_pdf.py
backend/Trans_dxf/: dxf_method.py  pdf_to_dxf.py  pdf_to_svg.py
frontend/: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  Test.tsx  converter_pdf_to_dxf.tsx  flv_cutout.tsx  jpg_and_png_capacity_compression.tsx  opinion.tsx  pdf_capacity_compression.tsx  pdf_split_or_tie.tsx
release/: .gitignore  README.md  compose.yaml  nginx.conf
