[tool.poetry]
name = "pdf-to-dxf"
version = "0.1.0"
description = "pdf to dxf converter"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
PyPDF2 = "^3.0.1"
fastapi = "^0.109.2"
argparse = "^1.4.0"
pymupdf = "^1.23.22"
uvicorn = {extras = ["standard"], version = "^0.27.1"}

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^24.2.0"
rope = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
